03-manifests/templates/gateway/istio-service.yaml
# istio-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-nlb
  namespace: istio-system
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /healthz/ready
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: '15021'
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:ap-northeast-2:379355014195:certificate/cdf63c20-0916-4377-81cf-4f96c231ff5d"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
spec:
  type: LoadBalancer
  selector:
    istio: ingress
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP

    - name: https
      port: 443
      targetPort: 8080
      protocol: TCP

    - name: status-port
      port: 15021
      targetPort: 15021
      protocol: TCP
