03-manifests/templates/gateway/istio-gateway.yaml
# istio-gateway.yaml

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tarot-gw
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.haechan.net
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "api.haechan.net"
